--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
         </div>
     </section>
     
-    <!-- Seções (igual ao que você já tem) -->
+    <!-- Seções -->
     <section id="section1" class="section">
         <h1>1º HORTAS VERTICAIS</h1>
         <div class="section-content">
             <img src="horta-vertical-capa.png" alt="Imagem 1">
-            <p> São uma solução eficiente para cultivar plantas em espaços reduzidos, usando estruturas verticais como painéis, paredes ou estantes. Elas economizam espaço, melhoram a qualidade do ar e têm um apelo estético. Cuidados importantes incluem garantir iluminação adequada, irrigação eficiente e uma estrutura resistente. Plantas recomendadas incluem ervas como manjericão e coentro, hortaliças como alface e espinafre, e flores como petúnias e gerânios.</p>
+            <p>São uma solução eficiente para cultivar plantas em espaços reduzidos, usando estruturas verticais como painéis, paredes ou estantes. Elas economizam espaço, melhoram a qualidade do ar e têm um apelo estético. Cuidados importantes incluem garantir iluminação adequada, irrigação eficiente e uma estrutura resistente. Plantas recomendadas incluem ervas como manjericão e coentro, hortaliças como alface e espinafre, e flores como petúnias e gerânios.</p>
         </div>
     </section>
 
@@ -64,18 +64,17 @@
     </section>
     
     <section id="section4" class="section">
-        <h1>4º ILUMINÃO LED PARA CRESCIMENTO</h1>
+        <h1>4º ILUMINAÇÃO LED PARA CRESCIMENTO</h1>
         <div class="section-content">
-            <img src="lmpadas-ideais.png" alt="Imagem 1">
-            <p> A iluminação LED para crescimento de plantas é eficiente em termos de energia, tem uma vida útil longa e emite menos calor. As luzes fornecem espectros específicos (principalmente azul e vermelho) para promover a fotossíntese e o crescimento. Muitas permitem ajustar o espectro para diferentes fases de crescimento. São ideais tanto para pequenas plantas de casa quanto para grandes operações de cultivo indoor.
-                </p>
+            <img src="lmpadas-ideais.png" alt="Imagem 4">
+            <p>A iluminação LED para crescimento de plantas é eficiente em termos de energia, tem uma vida útil longa e emite menos calor. As luzes fornecem espectros específicos (principalmente azul e vermelho) para promover a fotossíntese e o crescimento. Muitas permitem ajustar o espectro para diferentes fases de crescimento. São ideais tanto para pequenas plantas de casa quanto para grandes operações de cultivo indoor.</p>
         </div>
     </section>
 
     <section id="section5" class="section">
         <h1>5º SENSORES DE MONITORAMENTO REMOTO</h1>
         <div class="section-content">
-            <img src="Entenda-o-que-e-o-sensoriamento-remoto-e-como-ele-otimiza-o-manejo-agricola.jpg" alt="Imagem 2">
+            <img src="Entenda-o-que-e-o-sensoriamento-remoto-e-como-ele-otimiza-o-manejo-agricola.jpg" alt="Imagem 5">
             <p>Sensores e monitoramento remoto na agricultura otimizam o cultivo medindo umidade, temperatura, nutrientes, clima, luz e saúde das plantas. Utilizam tecnologias como Wi-Fi e redes celulares para transmitir dados. Aplicações incluem irrigação de precisão, monitoramento climático, gestão de nutrientes e detecção de pragas. Benefícios incluem aumento de produtividade, redução de custos e práticas sustentáveis, apesar de desafios como custo inicial, infraestrutura de rede e manutenção.</p>
         </div>
     </section>
@@ -83,7 +82,7 @@
     <section id="section6" class="section">
         <h1>6º PLATAFORMAS DE GESTÃO E PLANEJAMENTO</h1>
         <div class="section-content">
-            <img src="software-gestao-agricola (5).jpg" alt="Imagem 3">
+            <img src="software-gestao-agricola (5).jpg" alt="Imagem 6">
             <p>Plataformas de gestão e planejamento na agricultura melhoram a eficiência e produtividade ao automatizar tarefas, monitorar culturas em tempo real e analisar dados. Elas ajudam na gestão de recursos, aumento da produtividade e promoção da sustentabilidade. Exemplos incluem softwares de gestão de fazendas, plataformas de sensoriamento remoto e sistemas de irrigação inteligente. Desafios incluem custo inicial, necessidade de treinamento, conectividade e segurança de dados.</p>
         </div>
     </section>
@@ -97,4 +96,7 @@
         </div>
     </footer>
 
-   
+    <!-- Inclusão do script JavaScript -->
+    <script src="script.js"></script>
+</body>
+</html>
